<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@id/root_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@id/tmp"
            layout="@layout/wzrk_fragment_base_asy_collect" />

        <!--全检数量-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                style="@style/LeftTextViewItemStyle"
                android:text="@string/xngd_all_quantity" />

            <EditText
                android:id="@id/xngd_et_all_quantity"
                style="@style/RightRichEditTextItemStyle"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <!--抽检数量-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                style="@style/LeftTextViewItemStyle"
                android:text="@string/xngd_part_quantity" />

            <EditText
                android:id="@id/xngd_et_part_quantity"
                style="@style/RightRichEditTextItemStyle"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <!--检验状态-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                style="@style/LeftTextViewItemStyle"
                android:text="@string/xngd_inspection_status" />

            <Spinner
                android:id="@id/xngd_sp_inspection_status"
                android:layout_width="0dp"
                android:layout_height="@dimen/spinner_min_height"
                android:layout_weight="2" />

        </LinearLayout>


        <!--检验方法-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                style="@style/LeftTextViewItemStyle"
                android:text="@string/xngd_inspection_type" />

            <Spinner
                android:id="@id/xngd_sp_inspection_type"
                android:layout_width="0dp"
                android:layout_height="@dimen/spinner_min_height"
                android:layout_weight="2" />
        </LinearLayout>


        <!--处理情况-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                style="@style/LeftTextViewItemStyle"
                android:text="@string/xngd_process_result" />

            <EditText
                android:id="@id/xngd_et_process_result"
                style="@style/RightRichEditTextItemStyle"
                android:inputType="numberDecimal" />

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>